# maia-italy-aia

./: .gitignore  2022-03-09-gray-shades.py  2022-03-09-hello-world.py  2022-03-09-median-compare.py  2022-03-15-gamma_correction.py  2022-03-15-histogram-calculation.py  2022-03-15-image-normalization.py  2022-03-15-mammogram-log.py  2022-03-16-histogram-equalization-color.py  2022-03-16-histogram-equalization.py  2022-03-17-denoise-salt-and-papper.py  2022-03-23-denoise-gaussian.py  2022-03-23-gradient-image.py  2022-03-24-binarized.py  2022-03-24-sharpening-laplacian.py  2022-03-24-sharpening-photoshop.py  2022-03-29-object-picking.py  2022-03-29-opening-closing.py  2022-03-31-junctions-matching.py  2022-04-05-contour-filling.py  2022-04-05-hough-line-detection.py  2022-04-05-long-character-reconstruction.py  2022-04-05-tools-opening-by-reconstruction.py  2022-04-07-traffic-light-detection.py  2022-04-07-traffic-light-recognition.py  2022-04-20-alternating-sequential-filtering.py  2022-04-20-grayscale-morphological-reconstruction.py  2022-04-20-ilumination-correction.py  2022-04-20-morphological-gradient.py  2022-04-21-gradient-based-edge-detection.py  2022-04-21-log-based-edge-detection.py  2022-04-26-canny-egde-detection.py  2022-04-27-watershed.py  2022-04-28-mean-shift.py  README.md  utils.py
OpenCV 4 - C++_/: CMakeLists.txt  README_eng.txt  README_ita.txt
OpenCV 4 - C++_/LoG_based_edge_detection/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/alternating_sequential_filtering/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/binarization/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/contour_filling/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/denoise_gaussian/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/denoise_salt_and_pepper/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/gamma_correction/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/gradient_based_edge_detection/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/gradient_image/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/gray_shades/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/grayscale_morphological_reconstruction/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/hello_world/: CMakeLists.txt  functions.cpp  main.cpp
OpenCV 4 - C++_/histogram_calculation/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/histogram_equalization/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/histogram_equalization_color/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/hough_line_detection/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/ilumination_correction/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/image_normalization/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/junctions_matching/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/long_characters_reconstruction/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/mammogram_log/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/median_compare/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/morphological_gradient/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/myproject/: CMakeLists.txt  functions.h  main.cpp
OpenCV 4 - C++_/object_picking/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/opening_closing/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/sharpening_laplacian/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/sharpening_photoshop/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/tools_opening_by_reconstruction/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/traffic_light_detection/: CMakeLists.txt  main.cpp
OpenCV 4 - C++_/traffic_light_recognition/: CMakeLists.txt  main.cpp
